Tue Mar 28 09:36:23 2023  Jiri (George) Lebl <jirka@5z.com>

	* examples/euler-method-graphs-exp.gel: Make sure we do computations
	  with floats to avoid running out of memory with something like
	  g(x,y)=y^2

Tue Mar 28 09:30:30 2023  Jiri (George) Lebl <jirka@5z.com>

	* examples/euler-method-graphs-exp.gel: Improve and make more
	  customizable

Wed Feb 08 23:02:43 2023  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: shut up warning, make graphing window be owned by
	  their parent, make things work more nicely on something like i3wm

	* src/gnome-genius.c: used fclose on popened stream, whoops

Wed Apr 20 15:46:47 2022  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theory/primes.gel: Update to newest data from GIMPS

Wed Oct 27 15:47:14 2021  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.27

Thu Oct 14 23:08:30 2021  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix off by one in the computing of the graphing
	  subintervals for surface plots
	
	* examples/zoom-differentiability.gel: wait for a moment at the
	  start, and a slightly different nondifferentiable function

Thu Oct 14 19:07:05 2021  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: improve slightly again efficiency, and make
	  rotation by holding down a key work better.

Thu Oct 14 17:04:17 2021  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: surface plots got recomputed twice, so only compute
	  once and setup in the same way as when plotting data, except
	  recomputing the data on zoom.

Thu Oct 14 01:12:53 2021  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Fix unsetting the stop button on script end,
	  fix current program marking.

	* src/graphing.c: Fix a couple of possible crashes when resetting
	  variable names.

Thu Oct 14 00:00:18 2021  Jiri (George) Lebl <jirka@5z.com>

	* graphing.c: improve slightly the frozenness of 3d plots, and enable
	  the stop button on the graph window the whole time a script is running.
