@@ -1,3 +1,7 @@
+Wed Jul 19 17:18:25 2023  Jiri (George) Lebl <jiri.lebl@gmail.com>
+
+	* gtkextra/gtkplotps.c: Fix drawing points in poscript/PDF
+
 Tue Mar 28 09:36:23 2023  Jiri (George) Lebl <jirka@5z.com>
 
 	* examples/euler-method-graphs-exp.gel: Make sure we do computations
